testCases/parserTestCases/error/uminus.cs16
/*
    This tests uminus
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(int x){
    int x, y, z[5],a[x];

    x := -x;
    y := z[-3];
    a := z;
    z[3] := y;

}